# src/app/controller/user-controller.js
@@ -96,4 +96,4 @@ router.put('/update-user/:id_user', async(req, res) => {
 
 });
 
-module.exports = app => app.use('/auth/v1', router);
+module.exports = app => app.use('/authenticate', router);
