# src/swagger.json
@@ -56,6 +56,9 @@
                 "tags": [
                     "Stocks"
                 ],
+                "security": [{
+                    "bearerAuth": []
+                }],
                 "responses": {
                     "401": {
                         "description": "Unauthorized"
@@ -82,6 +85,9 @@
                 "tags": [
                     "Stocks"
                 ],
+                "security": [{
+                    "bearerAuth": []
+                }],
                 "description": "",
                 "parameters": [{
                         "name": "id_trade",
@@ -109,7 +115,7 @@
                 }
             }
         },
-        "/auth/v1/login": {
+        "/auth/login": {
             "post": {
                 "summary": "Login de usuário",
                 "tags": [
@@ -153,7 +159,7 @@
                 }
             }
         },
-        "/auth/v1/register": {
+        "/auth/register": {
             "post": {
                 "summary": "Cadastro de usuário",
                 "tags": [
@@ -198,7 +204,7 @@
                 }
             }
         },
-        "/auth/v1/update-user/{id_user}": {
+        "/auth/update-user/{id_user}": {
             "put": {
                 "summary": "Atualização de usuário",
                 "tags": [
